# Cober-Windows-Bar

./: .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  CONTRIBUTING.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
docs/: ARCHITECTURE.md  EVENT_FLOW.md  IMPLEMENTATION_PLAN.md  MOCK_PROVIDER_PLAN.md  PROVIDER_LIFECYCLE.md  PROVIDER_MODEL.md  PROVIDER_REGISTRY.md  PROVIDER_RUNTIME.md  PROVIDER_SDK.md  README.md  ROADMAP-NEXT-V2.md  ROADMAP-NEXT.md  ROADMAP.md  SHOWCASE_QA.md  TAURI_STRATEGY.md  TEST_STRATEGY.md  v0.5.2_FREEZE.md  v0.5.3_ALIGNMENT_REPORT.md  v0.5.4_FINAL_FREEZE.md  v0.5.4_FREEZE.md  v0.5.4_REFREEZE.md  v0.6.1_ALIGNMENT_PLAN.md  v0.6_AUDIT_REPORT.md  v0.7_TAURI_SPIKE_PLAN.md  v0.8_FIRST_PROVIDER_CANDIDATE_DECISION.md  v0.8_SYSTEM_STATUS_FIRST_CONCRETE_PHASE_BOUNDARY_DECISION.md  v0.8_SYSTEM_STATUS_GATE_COMPLETION_DECISION.md  v0.8_SYSTEM_STATUS_NATIVE_BOUNDARY_DESIGN_PLAN.md  v0.8_SYSTEM_STATUS_NATIVE_RUNTIME_PROVIDER_PATH_PLAN.md  v0.8_SYSTEM_STATUS_NATIVE_SOURCE_ANSWER_SAFE_BOUNDARY_DECISION.md  v0.8_SYSTEM_STATUS_NATIVE_SOURCE_BOUNDARY_ANSWERABILITY_DECISION.md  v0.8_SYSTEM_STATUS_NATIVE_SOURCE_BOUNDARY_QUESTIONS.md  v0.8_SYSTEM_STATUS_NATIVE_SOURCE_FUTURE_EVIDENCE_GATE_MAP.md  v0.8_SYSTEM_STATUS_PRIVACY_CHECKLIST.md  v0.8_SYSTEM_STATUS_READINESS_EVIDENCE_DECISION.md  v0.8_SYSTEM_STATUS_RUNTIME_PAYLOAD_CONTRACT_PLAN.md
src/: App.tsx  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
(+193 files in other folders)
